@@ -254,6 +254,7 @@ SEXP do_names(SEXP, SEXP, SEXP, SEXP);
 SEXP do_namesgets(SEXP, SEXP, SEXP, SEXP);
 SEXP do_nargs(SEXP, SEXP, SEXP, SEXP);
 SEXP do_nchar(SEXP,SEXP,SEXP,SEXP);
+SEXP do_newenv(SEXP,SEXP,SEXP,SEXP);
 SEXP do_nextmethod(SEXP,SEXP,SEXP,SEXP);
 SEXP do_nextn(SEXP,SEXP,SEXP,SEXP);
 SEXP do_nlm(SEXP, SEXP, SEXP, SEXP);
@@ -266,6 +267,8 @@ SEXP do_order(SEXP, SEXP, SEXP, SEXP);
 SEXP do_palette(SEXP, SEXP, SEXP, SEXP);
 SEXP do_par(SEXP, SEXP, SEXP, SEXP);
 SEXP do_paren(SEXP, SEXP, SEXP, SEXP);
+SEXP do_parentenv(SEXP, SEXP, SEXP, SEXP);
+SEXP do_parentenvgets(SEXP, SEXP, SEXP, SEXP);
 SEXP do_parentframe(SEXP, SEXP, SEXP, SEXP);
 SEXP do_parse(SEXP, SEXP, SEXP, SEXP);
 SEXP do_paste(SEXP, SEXP, SEXP, SEXP);
