@@ -5,6 +5,8 @@
 \alias{globalenv}
 \alias{is.environment}
 \alias{new.env}
+\alias{parent.env}
+\alias{parent.env<-}
 \title{Environment Access}
 \description{
   Get, set, test for and create environments.
@@ -15,13 +17,19 @@ environment(fun) <- value
 is.environment(obj)
 .GlobalEnv
 globalenv()
-new.env()
+new.env(hash=FALSE, parent=parent.frame())
+parent.env(env)
+parent.env<-(env, value)
 }
 \arguments{
   \item{fun}{a \code{\link{function}}, a \code{\link{formula}}, or
     \code{NULL}, which is the default.}
-  \item{value}{}
+  \item{value}{an environment to associate with the function}
   \item{obj}{an arbitrary \R object.}
+  \item{hash}{a logical, if \code{TRUE} the environment will be hashed}
+  \item{parent}{an environment to be used as the parent of the
+    environment created.}
+  \item{env}{an environment}
 }
 \value{
   If \code{fun} is a function or a formula then \code{environment(fun)}
@@ -36,7 +44,11 @@ new.env()
   \code{environment}.
 
   \code{new.env} returns a new (empty) environment enclosed in the
-  parent's environment.
+  parent's environment, by default.
+
+  \code{parent.env} returns the parent environment of its argument.
+
+  \code{parent.env<-} sets the parent environment of its first argument.
 }
 \details{
   The global environment \code{.GlobalEnv} is the first item on the
@@ -55,6 +67,13 @@ environment(environment)
 ls(envir=environment(approxfun(1:2,1:2, method="const")))
 
 is.environment(.GlobalEnv)# TRUE
+
+e1 <- new.env(TRUE, NULL)
+e2 <- new.env(FALSE, NULL)
+assign("a", 3, env=e2)
+parent.env(e1) <- e2
+get("a", env=e1)
+
 }
 \keyword{data}
 \keyword{programming}
